# hid-exercises

chapter10/section1/: Main.hs  section1.cabal
chapter2/: chapter2.cabal  package.yaml
chapter2/app/: Main.hs
chapter2/data/: dirs2.txt  turns2.txt
chapter2/src/: Lib.hs
chapter2/test/: Spec.hs
chapter3/stockquotes/: package.yaml  stack.yaml  stockquotes.cabal
chapter3/stockquotes/app/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
chapter4/containers-mini/: ChangeLog.md  README.md  containers-mini.cabal  package.yaml
chapter4/containers-mini/bench/: Bench.hs
chapter4/containers-mini/src/Data/: Deque.hs  (+2 more)
chapter4/containers-mini/test/: Spec.hs
chapter5/section1/: CHANGELOG.md  LICENSE  README.md  section1.cabal
chapter5/section1/app/: Main.hs
chapter5/section2/: CHANGELOG.md  Main.hs  \  section2.cabal
chapter5/section3/: Main.hs  section3.cabal
chapter6/section1/: CHANGELOG.md  Main.hs  Rpm.hs  section1.cabal
chapter6/section2/: AppRWST.hs  AppTypes.hs  DirTree.hs  DiskUsage.hs  FileCounter.hs  Main.hs  Utils.hs  section2.cabal
chapter6/section3/: Main.hs  section3.cabal
chapter7/section1/: Main.hs  section1.cabal
chapter7/section2/: Main.hs  section2.cabal
chapter7/section3/: CHANGELOG.md  Main.hs  section3.cabal
chapter8/section1/: IPTypes.hs  LookupIP.hs  ParseIP.hs  section1.cabal
chapter8/section2/: Main.hs  ParseIP.hs  ParseIPSpec.hs  Test.hs  section2.cabal
chapter9/section1/: Main.hs  section1.cabal
chapter9/section2/: 2  Main.hs  section2.cabal
chapter9/section3/: Main.hs  section3.cabal
